<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">RoveCast</string>
    <string name="status_playing" translatable="false">Playing</string>
    <string name="status_paused" translatable="false">Paused</string>
    <string name="player_title_radio" translatable="false">Radio</string>
    <string name="player_metadata_placeholder" translatable="false">Meta</string>
    <string name="hint_preset_name" translatable="false">Preset Name</string>
    <string name="hint_duration_minutes" translatable="false">Duration (minutes)</string>
    <string name="add_preset" translatable="false">Añadir Preset</string>
    <string name="alarm_default_time" translatable="false">07:00</string>
    <string name="hint_select_radio" translatable="false">Select radio station</string>
    <string name="day_monday_short" translatable="false">L</string>
    <string name="day_tuesday_short" translatable="false">M</string>
    <string name="day_wednesday_short" translatable="false">X</string>
    <string name="day_thursday_short" translatable="false">J</string>
    <string name="day_friday_short" translatable="false">V</string>
    <string name="day_saturday_short" translatable="false">S</string>
    <string name="day_sunday_short" translatable="false">D</string>
    <string name="alarm_activate" translatable="false">Set Alarm</string>
    <string name="alarm_deactivate" translatable="false">Deactivate Alarm</string>
    <string name="update_alarm" translatable="false">Update Alarm</string>
    <string name="save" translatable="false">Save</string>
    <string name="search_hint" translatable="false">Buscar</string>
    <string name="menu_sleep_timer" translatable="false">Sleep Timer</string>
    <string name="menu_cast" translatable="false">Cast</string>
    <string name="menu_favorite" translatable="false">Favorite</string>
    <string name="menu_alarm" translatable="false">Alarm</string>
    <string name="menu_privacy_policy" translatable="false">Privacy Policy</string>
    <string name="preset_display_format" translatable="false">%1$s (%2$d min)</string>
    <string name="cd_station_logo" translatable="false">Station logo</string>
    <string name="cd_play_pause_button" translatable="false">Play or pause button</string>
    <string name="cd_mini_player_title">Nombre de la estación</string>
    <string name="favorites_empty_state" translatable="false">Aún no tienes favoritos. Toca una estación y agrégala desde el reproductor.</string>
    <string name="notif_channel_name" translatable="false">Reproducción</string>
    <string name="notif_channel_desc" translatable="false">Control de reproducción de RoveCast</string>
    <string name="cd_favorite_button" translatable="false">Add to favorites</string>
    <string name="desc_repeat" translatable="false">Activar repetición</string>
    <string name="desc_devices" translatable="false">Seleccionar dispositivo de reproducción</string>
    <string name="menu_timer" translatable="false">Sleep Timer</string>
    <string name="menu_search" translatable="false">Buscar</string>
    <string name="menu_favorites" translatable="false">Favoritos</string>
    <string name="menu_settings" translatable="false">Ajustes</string>

    <!-- SOLUCIÓN: Strings para estados de reproducción -->
    <string name="playback_state_playing" translatable="false">Reproduciendo</string>
    <string name="playback_state_paused" translatable="false">Pausado</string>

    <string name="station_logo_description" translatable="false">Logo de la estación</string>
    
    <!-- Privacy Policy and Consent Strings -->
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="manage_privacy_settings">Manage Privacy Settings</string>
    <string name="update_privacy_settings">Update Privacy Settings</string>
    <string name="thank_you">Thank You</string>
    <string name="consent_accepted_message">Thank you for accepting our privacy policy. Your preferences have been saved.</string>
    <string name="consent_rejected_message">Your privacy preferences have been updated. Some features may be limited.</string>
    <string name="privacy_policy_url">https://tusitio.com/politica-de-privacidad</string>
    
    <!-- Mini-player content descriptions -->
    <string name="cd_mini_player_logo">Logo de la estación de radio</string>
    <string name="cd_mini_player_progress">Progreso de reproducción</string>
    <string name="cd_mini_player_status">Estado de reproducción</string>
    <string name="cd_mini_player_favorite">Agregar a favoritos</string>
    <string name="cd_mini_player_cast">Conectar a dispositivo Cast</string>
    <string name="mini_player_status_live">En vivo</string>
</resources>
